# aws-omics-demo

./: .gitignore  Makefile  README.md  build_ami.py  config.example.py  pyproject.toml  run_headless.py  teardown.py
.github/workflows/: ci.yml
benchmark/: README.md  STATUS.md  analyze_study.py  bake_x86_tools_ami.py  build_fsx_db.py  db-delivery-az-decision.md  lifecycle_metrics.py
benchmark/results/lifecycle/: MEASUREMENTS.md
benchmark/results/lifecycle/arm64-n3-smoke/: NA12878.timings.json  NA18525.timings.json  NA19238.timings.json
benchmark/results/lifecycle/arm64-n30/: stats.json  summary.json
benchmark/results/lifecycle/arm64-n30/staging/: HG00096.timings.json  HG00097.timings.json  HG00099.timings.json  HG00100.timings.json  HG00171.timings.json  HG00173.timings.json  HG00403.timings.json  HG00404.timings.json  HG00406.timings.json  HG02922.timings.json  HG02923.timings.json  NA12878.timings.json  NA12889.timings.json  NA12890.timings.json  NA18525.timings.json  NA18526.timings.json  NA18528.timings.json  NA18537.timings.json  NA18939.timings.json  NA18940.timings.json  NA18941.timings.json  NA19026.timings.json  NA19027.timings.json  NA19028.timings.json  NA19238.timings.json  NA19239.timings.json  NA19240.timings.json  NA19247.timings.json  NA19256.timings.json  NA20502.timings.json
benchmark/results/lifecycle/x86-n3-smoke/: NA12878.timings.json  NA18525.timings.json  NA19238.timings.json  stats.json
benchmark/results/lifecycle/x86-n30/: summary.json
benchmark/results/lifecycle/x86-n30/staging/: HG00096.timings.json  HG00097.timings.json  HG00099.timings.json  HG00100.timings.json  HG00171.timings.json  HG00173.timings.json  HG00403.timings.json  HG00404.timings.json  HG00406.timings.json  HG02922.timings.json  HG02923.timings.json  NA12878.timings.json  NA12889.timings.json  NA12890.timings.json  NA18525.timings.json  NA18526.timings.json  NA18528.timings.json  NA18537.timings.json  NA18939.timings.json  NA18940.timings.json  NA18941.timings.json  NA19026.timings.json  NA19027.timings.json  (+7 more)
docs/: ami-vs-data-volume.md  demo.md  methodology.md  results.md
docs/blog/: end-to-end.md
docs/decisions/: 0001-db-delivery-ami-ebs-fsx.md  0002-timing-instance-lifetime-not-trace.md  0003-fanout-ecr-ptc-and-stage-once.md  0004-variant-qc-titv-and-population-differentiation.md  README.md
scripts/: tag_db_snapshot.sh
src/omics_demo/: __init__.py  accessions.py  agent.py  app.py  cost.py  lifecycle.py  nextflow_config.py  pipeline.py  pricing.py  spawn.py  truffle.py  worker_script.py
src/omics_demo/pipeline/: README.md  head_bootstrap.sh.tmpl  main.nf  monitor.py
src/omics_demo/static/: index.html
tests/: conftest.py  test_agent.py  test_app.py  test_cost.py  test_monitor_parse.py  test_pipeline.py  test_truffle.py  test_worker_script.py
