[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omics-demo"
version = "0.1.0"
description = "Live AWS 1000 Genomes variant-calling demo — real Open Data BAMs, real Graviton compute, real cost meter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "boto3>=1.38",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# worker_script.py contains Python embedded inside bash heredoc strings;
# ruff cannot parse those sections and reports false invalid-syntax errors.
"src/omics_demo/worker_script.py" = ["E501", "E999"]
"src/omics_demo/nextflow_config.py" = ["E501"]
"build_ami.py" = ["E501"]
# build_fsx_db.py embeds the staging user-data as a bash heredoc; those lines
# (aws-cli invocations) cannot be wrapped to 100 cols.
"benchmark/build_fsx_db.py" = ["E501"]
# bake_x86_tools_ami.py imports config after a sys.path/find_spec guard (intentional).
"benchmark/bake_x86_tools_ami.py" = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
