[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omics_demo"]
# Ship the non-Python pipeline artifacts (main.nf, monitor.py, the bootstrap
# template, README) — worker_script.py reads them from pipeline/ at runtime.
artifacts = ["src/omics_demo/pipeline/*"]

[project]
name = "omics-demo"
version = "0.1.0"
description = "Live AWS 1000 Genomes variant-calling demo — real Open Data BAMs, real Graviton compute, real cost meter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "boto3>=1.38",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# nextflow_config.py builds the nextflow.config as a long-lined template string.
"src/omics_demo/nextflow_config.py" = ["E501"]
"build_ami.py" = ["E501"]
# build_fsx_db.py embeds the staging user-data as a bash heredoc; those lines
# (aws-cli invocations) cannot be wrapped to 100 cols.
"benchmark/build_fsx_db.py" = ["E501"]
# bake_x86_tools_ami.py imports config after a sys.path/find_spec guard (intentional).
"benchmark/bake_x86_tools_ami.py" = ["E402", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
